fix overflow issue

--- a/src/scss/general/_base.scss
+++ b/src/scss/general/_base.scss
@@ -145,3 +145,7 @@ h4 {
 	width: 6em;
 	margin: 0 auto $space-md auto;
 }
+
+main {
+	overflow: hidden;
+}
